# interior-point

./: CMakeLists.txt  Interior.cpp  Interior.hpp  LinAlg.cpp  LinAlg.hpp  README.md  main.cpp  tasks.txt
